added login, register and partial back-end functionality

--- a/package.json
+++ b/package.json
@@ -31,11 +31,23 @@
     "angular-material-time-picker": "^1.0.8",
     "angular-redux": "^1.0.0-beta",
     "angular5-time-picker": "^1.0.8",
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mdbootstrap": "^4.5.2",
+    "mongodb": "^3.1.0-beta4",
+    "mongoose": "^5.1.2",
+    "morgan": "^1.9.0",
     "ng-redux": "^4.0.3",
+    "ontime": "0.0.4",
     "redux-logger": "^3.0.6",
     "rxjs": "^5.5.6",
+    "serve-favicon": "^2.5.0",
+    "sweetalert": "^2.1.0",
+    "sweetalert2": "^7.20.7",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
