--- a/package.json
+++ b/package.json
@@ -42,12 +42,11 @@
     "mongoose": "^5.1.2",
     "morgan": "^1.9.0",
     "ng-redux": "^4.0.3",
+    "nodemon": "^1.17.5",
     "ontime": "0.0.4",
     "redux-logger": "^3.0.6",
     "rxjs": "^5.5.6",
     "serve-favicon": "^2.5.0",
-    "sweetalert": "^2.1.0",
-    "sweetalert2": "^7.20.7",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
