--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "core-js": "^2.4.1",
+    "deep-freeze": "0.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mdbootstrap": "^4.5.2",
@@ -42,11 +43,16 @@
     "mongoose": "^5.1.2",
     "morgan": "^1.9.0",
     "ng-redux": "^4.0.3",
+    "nodemailer": "^4.6.5",
     "nodemon": "^1.17.5",
     "ontime": "0.0.4",
+    "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^0.18.0",
     "rxjs": "^5.5.6",
+    "rxjs-compat": "^6.2.2",
     "serve-favicon": "^2.5.0",
+    "tassign": "^1.0.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
